namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-record-a-recall-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-record-a-recall-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "private_x-product_features_legacy"
    cloud-platform.justice.gov.uk/slack-alert-channel: "farsight-alerts"
    cloud-platform.justice.gov.uk/application: "Record a recall"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-record-a-recall"
    cloud-platform.justice.gov.uk/team-name: "hmpps-calculate-release-dates-team-live"
    cloud-platform.justice.gov.uk/review-after: ""
